# fallout2-ce-coop

./: .gitignore  ACCOUNT_IDENTITY_DESIGN.md  APPLYBLOB_TEARDOWN_PLAN.md  ARCHITECTURE.md  BARTER_STREAMING_PLAN.md  CLIENT_JOIN_DESIGN.md  CMakeLists.txt  COMBAT_CLIENT_DESIGN.md  COMBAT_MOVE_RECORD_DESIGN.md  DEDICATED_HOWTO.md  DIALOG_STREAMING_PLAN.md  GLOSSARY.md  HANDSHAKE_REWORK_PLAN.md  IDEAS.md  INTERACTION_UX_DESIGN.md  ITEM_GLOSSARY.md  MAP_GLOSSARY.md  MP_PROPOSAL.md  MP_PROTOCOL.md  NOTES.txt  PASSIVE_SIM_MAP.md  PLAYER_ACTION_MAP.md  PLAYER_SHEET_DESIGN.md  PRESENTATION_FSM_DESIGN.md  PRESENTATION_RECORD_REPLAY_COOKBOOK.md  PRESENTATION_RECORD_REPLAY_SPEC.md  README.md  REWRITE_PLAN.md  SCRIPT_OPCODE_MAP.md  SERVER_LOOP_DESIGN.md  SYSTEM_MAP.md  TEMPLE_DEMO_ROADMAP.md  WORKLIST_P1.md  WORKLIST_P1_LEDGER.md
.github/: FUNDING.yml
AGENTS/: MEMORY.md  anim-decouple-verification.md  barter-streaming-track.md  code-readability-policy.md  combat-full-record-channel.md  de-stub-cadence-rule.md  dialog-headless-plan.md  dialog-streaming-track.md  dont-declare-not-a-bug-confidently.md  f2-rewrite-project.md  fonline-prior-art.md  frame-index-render-gotcha.md  holistic-audit-2026-07-13.md  id-plus-cached-pointer-antipattern.md  item-pid-glossary.md  memory-doc-hygiene.md  modal-drivers-plan.md  model-choice-fable-vs-opus.md  mp-actor-architecture-principle.md  p5-cut-list.md  p5-server-plan.md  post-demo-hardening.md  pres-record-build-track.md  presentation-viewer-bugs.md  presenter-object-ref-model.md  sweep-before-recon-lesson.md  visual-verification-protocol.md  working-style-background-and-context.md
bugs/: 001-dialog-range-early-fire.md  002-door-anim-blocks-movement.md  003-containers-not-opening.md  004-migrate-doors-to-pres-replay.md  005-dialog-lips-audio.md  006-in-combat-item-use.md  007-character-creation.md
cmake/: mingw-w64-x86_64.cmake
drafts/: ARCHITECTURE_FLOW.md  CHAT_INPUT_RECON.md  COOP_LIVEPLAY_BUGS_2026-07-21.md  DIALOG_TRADE_SPEC.md  FABLE_SWEEP_2026-07-21.md  MULTIMAP_WORLD_SKETCH.md  PRESENTATION_PACING_DESIGN.md  viewer-modal-pattern.md  worldmap-viewer-assessment.md
scripts/: barter_pump_smoke.sh  barter_stream_smoke.sh  check.sh  check_control.sh  check_core_no_sdl.sh  check_midjoin.sh  check_resumable.sh  check_server_core_only.sh  check_wire_combat.sh  combat_demo.sh  dialog_pump_smoke.sh  msg_style_demo.sh  server_run_case.sh  server_validate.sh  srv_step.sh  srv_sweep.sh  viewer_live.sh
src/: actions.cc  actions.h  animation.cc  animation.h  animation_scheduler.cc  animation_scheduler.h  art.cc  art_render.cc  audio_engine.cc  automap.cc  automap.h  automap_state.cc  barter_intent.cc  barter_intent.h  character_editor.cc  character_editor.h  character_editor_state.cc  character_transaction.cc  character_transaction.h  client_barter.cc  client_barter.h  client_dialog.cc  client_dialog.h  client_net.cc  client_net.h  client_present.cc  client_present.h  combat.cc  combat.h  combat_ai.cc  combat_ap.h  combat_drain.cc  combat_intent.cc  combat_intent.h  combat_ui.cc  combat_ui.h  command.cc  command.h  critter.cc  critter.h  (+157 more)
tests/golden/: artemple_idle.golden.txt  arvillag_actions.golden.txt  arvillag_chartxn.golden.txt  arvillag_idle.golden.txt  arvillag_invmenu.golden.txt  arvillag_perks.golden.txt  arvillag_rest.golden.txt  arvillag_restfight.golden.txt  arvillag_skills.golden.txt  arvillag_walk.golden.txt  arvillag_wmtravel.golden.txt  denbus1_loot.golden.txt  kladwtwn_door.golden.txt  klatoxcv_combat.golden.txt  run_golden.sh  run_golden_client.sh  run_golden_join.sh  run_golden_narrate.sh  run_golden_netsocket.sh  run_golden_netstream.sh  run_golden_replay.sh  run_golden_server.sh  run_record_purity.sh  trace_endturn.txt  trace_restfight.txt  trace_walk.txt
tests/golden/narrate/: arvillag_entermap.narrate.txt  arvillag_gunfight.narrate.txt  denbus1_barter.narrate.txt  denbus1_cdamage.narrate.txt  denbus1_itemworld.narrate.txt  kladwtwn_door_open.narrate.txt  klatoxcv_combat.narrate.txt
tests/golden/server/: artemple_idle.golden.txt  arvillag_actions.golden.txt  arvillag_chartxn.golden.txt  arvillag_gunfight.golden.txt  arvillag_idle.golden.txt  arvillag_invmenu.golden.txt  arvillag_perks.golden.txt  arvillag_rest.golden.txt  arvillag_restfight.golden.txt  arvillag_skills.golden.txt  arvillag_walk.golden.txt  arvillag_wmtravel.golden.txt  denbus1_barter.golden.txt  denbus1_cdamage.golden.txt  denbus1_climb.golden.txt  denbus1_dialog.golden.txt  denbus1_endgame.golden.txt  denbus1_explode.golden.txt  denbus1_firstaid.golden.txt  denbus1_knockback.golden.txt  denbus1_loot.golden.txt  denbus1_pickup.golden.txt  denbus1_push.golden.txt  kladwtwn_door.golden.txt  kladwtwn_door_open.golden.txt  klatoxcv_combat.golden.txt
tools/: control_probe.py  net_capture.py  replay.py  resumable_probe.py  wire_combat_probe.py
